[gd_scene load_steps=4 format=3 uid="uid://bigeakj21ra14"]

[ext_resource type="Script" path="res://src/UI/MainGameUI.gd" id="1_pi1u7"]
[ext_resource type="PackedScene" uid="uid://b7u4jpbkx823u" path="res://src/UI/EntityHolder.tscn" id="2_7brv4"]
[ext_resource type="PackedScene" uid="uid://ctmbrwcrwxg3l" path="res://src/UI/ItemHolder.tscn" id="3_c5ald"]

[node name="MainGameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pi1u7")

[node name="ArtistEnergyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 843.0
offset_top = 47.0
offset_right = 905.0
offset_bottom = 73.0
text = "Energy: "

[node name="EnemyHolder" parent="." instance=ExtResource("2_7brv4")]
layout_mode = 1
offset_left = 1007.0
offset_top = 60.0
offset_right = -9.0
offset_bottom = -452.0

[node name="NPCHolder" parent="." instance=ExtResource("2_7brv4")]
layout_mode = 1
offset_left = 1003.0
offset_top = 271.0
offset_right = -13.0
offset_bottom = -241.0

[node name="NextEnemyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1051.0
offset_top = 25.0
offset_right = 1193.0
offset_bottom = 51.0
text = "NextEnemyHolder"

[node name="NextNPCLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1045.0
offset_top = 222.0
offset_right = 1187.0
offset_bottom = 248.0
text = "NextNPCHolder"

[node name="ItemHolder" parent="." instance=ExtResource("3_c5ald")]
layout_mode = 1
offset_left = 1041.0
offset_top = 413.0
offset_right = 1041.0
offset_bottom = 413.0

[node name="HeroGoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 542.0
offset_right = 751.0
offset_bottom = 568.0
text = "Gold: "

[node name="DestructionBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 41.0
offset_right = 750.0
offset_bottom = 68.0
